# pr-agent

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.github_action  README.md  action.yaml  convert-svg.sh  pyproject.toml  secrets.example.toml
.github/workflows/: docker-publish.yml  docs-ci.yaml
deploy/: Caddyfile  Dockerfile.caddy  Dockerfile.status  Dockerfile.webhook  docker-compose.yml
docker/: Dockerfile  Dockerfile.lambda
docs/docs/: index.md
docs/docs/core-abilities/: compression_strategy.md  index.md  self_reflection.md
docs/docs/installation/: azure.md  index.md  locally.md
docs/docs/tools/: add_docs.md  ask.md  describe.md  generate_labels.md  help.md  help_docs.md  improve.mdx  review.md  similar_issues.md  update_changelog.md
docs/docs/usage-guide/: additional_configurations.md  changing_a_model.md  configuration_options.md  mail_notifications.md
pr_agent/: status_app.py  status_page.py  webhook_app.py
pr_agent/servers/: github_action_runner.py
templates/: caddy.xml  pr-agent.xml
tests/unittest/: test_github_action_runner_core.py
